tests/syntax_error/parentheses_embed_text_file.jou
global thing = embed_text_file "data.bin"  # Error: file name after embed_text_file must be in parentheses, e.g. embed_text_file("file.txt")
